fix mini album cover spacing issue

--- a/src/style.css
+++ b/src/style.css
@@ -506,7 +506,6 @@ ons-toolbar-button.player-control-button {
 }
 
 .mini-album-cover.button {
-  margin: 5px 15px 5px 15px;
   padding: 0;
 }
 .mini-album-cover img {
